    \item The \code{out.stat} function has changed to \code{outStat} and has
    been completely rewritten to use \pkg{ggplot2} functionality. See
    \code{?outStat} for complete details.
    \item A vignette title "An Quick Introudction to wgaim QTL Analysis"
    is available with the package and can be viewed using:

    \code{vignette("wgaim_intro")}
  }
}
\subsection{BUG FIXES}{
  \itemize{
    \item Fixed a bug that caused \code{summary.wgaim()} when only one
    QTL was found.
    \item Removed \code{maxiter = 1} from internal
    \code{predict.asreml()} to prevent spurious output of
    non-convergence warnings.
    \item The use of "." in the chromosome names muddles regular
    expression string matching in parts of the wgaim call. There is now
    code in \code{cross2int()} to remove "."s from any chromosome names.
    \item Flanking marker highlighting in \code{linkMap.wgaim()} was
    incorrect and has been amended.
}
}
}
\section{Changes in version 1.4-x}{
\subsection{NEW FEATURES}{
    \itemize{
      \item Restrictions on the layout of the plots in \code{out.stat()}
	have been removed.
      \item The argument \code{flanking} has been added to the QTL
	plotting functions ro ensure that only flanking markers or
	linked markers are plotted and highlighted on the linkage map.
      \item The forward selection algorithm has been accelerated further
      by smart matrix decomposition of the relationship matrix. Users
      can expect around a 35\% reduction in computation time.
      \item Outlier statistics and BLUPs can now be returned for any
      iteration of the algorithm regardless of whether a
      significant QTL is detected. This now allows easy access to
      outlier statistics and BLUPs for the first iteration when no QTL
      are detected (see the \code{breakout} argument of \code{wgaim.asreml()}.
      \item The package now includes a PDF reference manual that is accessible by